--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "tailwindcss": "^3.0.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.0.0"
+        "@fortawesome/fontawesome-free": "^6.0.0",
+        "@fortawesome/fontawesome": "^1.1.8",
+        "@fortawesome/fontawesome-free-solid": "^5.0.13"
     }
 }
